--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="mt-32">
         <div class="page-item-wrap relative">
             <div class="page-item flex-both-center relative"></div>
-            <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://crush.tappi.vn/dieutomuonnoibyminhduc" target="_blank">Tớ Với Cậu nè ấn vào đi <3 </a>
+            <a rel="noopener nofollow" class="page-item-each flex-both-center" href="https://crush.tappi.vn/dieutomuonnoibyminhduc" target="_blank">Tớ Nói Với Cậu nè ấn vào đi <3 </a>
         </div>
         <div class="page-item-wrap relative">
             <div class="page-item flex-both-center relative"></div>
